<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.microsoft.hsg.android.jc.SettingsActivity" >

    <View
        android:layout_width="1dp"
        android:layout_height="70dp" >
    </View>

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Connect to Microsoft® HealthVault®" >
    </Button>

    <TextView
        android:id="@+id/WelcomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/connect_desc"
        android:textSize="19sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="220dp" >
    </View>

    <LinearLayout
        style="@android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/symptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="loadSymptomActivity"
            android:text="Symptoms" />

        <Button
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="loadReportActivity"
            android:text="Report" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/symptoms_desc"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/report_desc"
        android:textSize="19sp" />

</LinearLayout>